<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    android:elevation="10dp"
    android:layout_margin="1dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/myAdvertiseRowLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@color/second_color"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/myAdvertiseRowImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_launcher_background"
            android:background="@mipmap/empty_image"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/car_image"
            app:layout_constraintVertical_bias="0.0"/>

        <TextView
            android:id="@+id/myAdvertiseRowAdvertTitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/title"
            android:textSize="18sp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="2dp"
            android:maxLines="2"
            app:layout_constraintStart_toEndOf="@id/myAdvertiseRowImageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/myAdvertiseRowAddressTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="4dp"
            android:text="@string/address"
            android:textColor="@color/black"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/myAdvertiseRowPriceTextView"
            app:layout_constraintStart_toEndOf="@id/myAdvertiseRowImageView"
            app:layout_constraintTop_toBottomOf="@+id/myAdvertiseRowAdvertTitleTextView"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/myAdvertiseRowPriceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:paddingEnd="5dp"
            android:text="@string/price"
            android:textColor="@color/primary_color"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/myAdvertiseRowAddressTextView"
            app:layout_constraintTop_toBottomOf="@+id/myAdvertiseRowAdvertTitleTextView"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="RtlSymmetry,SmallSp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
