<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ForgotPasswordActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="Reset Password"
        android:textColor="@color/text_color"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgotPasswordtextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="24dp"
        android:paddingLeft="17dp"
        android:paddingRight="17dp"
        android:text="@string/forgot_password"
        android:textColor="@color/text_color2"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/forgotPasswordEditText"
        android:layout_width="359dp"
        android:layout_height="60dp"
        android:layout_margin="24dp"
        android:background="@drawable/background_edittext"
        android:drawableRight="@drawable/ic_person"
        android:ems="10"
        android:hint="Email"
        android:padding="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordtextView" />

    <Button
        android:id="@+id/forgotPasswordEmailButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/background_button"
        android:backgroundTint="@color/primary_color"
        android:text="SUBMIT"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordEditText" />

    <TextView
        android:id="@+id/forgotPasswordCodetextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="24dp"
        android:paddingLeft="17dp"
        android:paddingRight="17dp"
        android:text="@string/forgot_password_code"
        android:textColor="@color/text_color2"
        android:textSize="18sp"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordEmailButton" />

    <EditText
        android:id="@+id/forgotPasswordCodeEditText"
        android:layout_width="359dp"
        android:layout_height="60dp"
        android:layout_margin="24dp"
        android:background="@drawable/background_edittext"
        android:drawableRight="@drawable/ic_verified_user"
        android:ems="10"
        android:hint="Code"
        android:padding="17dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.692"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordCodetextView" />

    <Button
        android:id="@+id/forgotPasswordCodeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/background_button"
        android:backgroundTint="@color/primary_color"
        android:text="SUBMIT"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordCodeEditText" />

    <TextView
        android:id="@+id/newPasswordtextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="24dp"
        android:paddingLeft="17dp"
        android:paddingRight="17dp"
        android:text="@string/new_password"
        android:textColor="@color/text_color2"
        android:textSize="18sp"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordCodeButton" />




    <EditText
        android:id="@+id/newPasswordEditText"
        android:layout_width="359dp"
        android:layout_height="60dp"
        android:layout_margin="24dp"
        android:background="@drawable/background_edittext"
        android:drawableRight="@drawable/ic_lock"
        android:ems="10"
        android:hint="New Password"
        android:padding="17dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.692"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPasswordtextView" />

    <Button
        android:id="@+id/newPasswordButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/background_button"
        android:backgroundTint="@color/primary_color"
        android:text="SUBMIT"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPasswordEditText" />


</androidx.constraintlayout.widget.ConstraintLayout>